fix alignment of contact info

--- a/css/resume.less
+++ b/css/resume.less
@@ -59,7 +59,6 @@ html, body {
       }
     }
     .contact {
-      display: inline-block;
       float: right;
       margin-top: 5px;
 
